# hledger-lit

./: README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: hledger-expert.agent.md
.github/instructions/: hledger-json.instructions.md
.github/prompts/: add-chart-type.prompt.md  add-test.prompt.md  bootstrap-tests.prompt.md
.streamlit/: config.toml
hledger_lit/: __init__.py  app.py  charts.py  config.py  hledger.py  models.py  transforms.py
tests/: conftest.py  test_charts.py  test_config.py  test_hledger.py  test_transforms.py
